<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray_200">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/img_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movies"
            tools:src="@color/purple_200" />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:ellipsize="end"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/tv_item_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:text="@string/year"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/duration"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_light"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:text="@string/detail"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>