<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies" />

    <item
        android:id="@+id/navigation_tvShow"
        android:icon="@drawable/ic_show"
        android:title="@string/tvShow" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />

</menu>